deleted an image tag

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body>
     <div class="assets">
-    <img src="./assets/backgrounds/h_img.jpg">
-    
+    <p id="delani">D</p>
+    <p>WELCOME</p>
+    <p>TO DELANI STUDIO</p>
+    <p>AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
 </div>
     
 </body>
