--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani Studio</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"> integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"> integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" >
         <script src="script.js"></script>
     <link href="css/bootstrap.css">
-    <link href="css/style.css">
-    
+    <link  rel= "stylesheet"   href="css/style.css">
 </head>
 <body>
     <div class="assets">
-    <p id="delani">D</p>
+        <img src="./assets/logo/logo.png">
     <p>WELCOME</p>
     <p>TO DELANI STUDIO</p>
     <p>AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
+    <img src="./assets/mouse_click.png">
 </div>
     
 </body>
