--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani Studio</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"> integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" >
-        <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"> integrity = "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin = "anonymous" >
+            <script src="script.js"></script>
     <link href="css/bootstrap.css">
-    <link  rel= "stylesheet"   href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div class="assets">
-        <img src="./assets/logo/logo.png">
-    <p>WELCOME</p>
-    <p>TO DELANI STUDIO</p>
-    <p>AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
-    <img src="./assets/mouse_click.png">
-</div>
-    
+    <div class="delani">
+        <div class="assets">
+            <img src="./assets/logo/logo.png">
+            <p>WELCOME</p>
+            <p>TO DELANI STUDIO</p>
+            <p>AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
+            <div class="mouse"> <img src="./assets/mouse_click.png"> 
+                </div>
+        </div>
+    </div>
 </body>
+
 </html>
