added a paragraph in html tag

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
             <div class="mouse"> <img src="./assets/mouse_click.png"> 
                 </div>
         </div>
+        <div id="about">
+            <div id="team">
+            <h><strong>About Us</strong></h>
+        </div> 
+         <p>When you work with us,you are apart of a team of committed collaboratorts.All aspects of our softwear development process are intergrated,interactive and agile</p>
+         <p>Our approach unifies design ,development and product management to create exceptional products</p>
+         <p>We start each project by understanding your business goals, the user's needs and the product requirements</p>
+         <p>Then we help translate them into effective and elegant solutions</p>
+         </div>
+         <div class="services">
+            
+            </div>
     </div>
 </body>
 
