added a div class on html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
          <p>Then we help translate them into effective and elegant solutions</p>
          </div>
          <div class="services">
-            
+            <div id="design">
+                <h1><strong>Services</strong></h1>
+                </div>
+                <p>Before we sign a contact or write a line of code our team will speand the necessary time needed  to understand  your product vision</p>
+                <p>The outcome of this scoping session is a proposal or  high-level statement of work.</p>
+                <p>based on  your requirements,we can provide accomplete offerings or just pieces you need</p>
             </div>
+            <div class="studio">
+                <div id="product">
+                    
+                    </div>
+                </div>
     </div>
 </body>
 
