added an image on the html tag

--- a/index.html
+++ b/index.html
@@ -19,31 +19,38 @@
             <p>WELCOME</p>
             <p>TO DELANI STUDIO</p>
             <p>AMAZING PEOPLE ARE MAKING DESIGNS IN A FUN ENVIRONMENT</p>
-            <div class="mouse"> <img src="./assets/mouse_click.png"> 
-                </div>
+            <div class="mouse"> <img src="./assets/mouse_click.png">
+            </div>
         </div>
         <div id="about">
             <div id="team">
-            <h><strong>About Us</strong></h>
-        </div> 
-         <p>When you work with us,you are apart of a team of committed collaboratorts.All aspects of our softwear development process are intergrated,interactive and agile</p>
-         <p>Our approach unifies design ,development and product management to create exceptional products</p>
-         <p>We start each project by understanding your business goals, the user's needs and the product requirements</p>
-         <p>Then we help translate them into effective and elegant solutions</p>
-         </div>
-         <div class="services">
+                <h><strong>About Us</strong></h>
+            </div>
+            <p>When you work with us,you are apart of a team of committed collaboratorts.All aspects of our softwear
+                development process are intergrated,interactive and agile</p>
+            <p>Our approach unifies design ,development and product management to create exceptional products</p>
+            <p>We start each project by understanding your business goals, the user's needs and the product requirements
+            </p>
+            <p>Then we help translate them into effective and elegant solutions</p>
+        </div>
+        <div class="services">
             <div id="design">
                 <h1><strong>Services</strong></h1>
-                </div>
-                <p>Before we sign a contact or write a line of code our team will speand the necessary time needed  to understand  your product vision</p>
-                <p>The outcome of this scoping session is a proposal or  high-level statement of work.</p>
-                <p>based on  your requirements,we can provide accomplete offerings or just pieces you need</p>
             </div>
-            <div class="studio">
-                <div id="product">
-                    
-                    </div>
-                </div>
+            <p>Before we sign a contact or write a line of code our team will speand the necessary time needed to
+                understand your product vision</p>
+            <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
+            <p>based on your requirements,we can provide accomplete offerings or just pieces you need</p>
+        </div>
+        <div class="studio" col-md-4>
+            <div id="product">
+                <img src="./assets/services_icons/design_icon.png">
+                <h2>Design</h2>
+                <p>Our design practice offers a full range of services including a brand strategy,interaction and visual design and user experience testing. </p>
+
+                <p>Throught your project, our designers create and implement visual design and workflows solict users feedback and work with you to make sure  what gets build is what is neede .</p>
+            </div>
+        </div>
     </div>
 </body>
 
