added images in the html and styled the class

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
             </div>
         </div>
         </div>
+
+        <div class="portfolio">
+            <h4><strong>Porfolio</strong></h4>
+            <img src="./assets/portfolio/work4.jpg">
+            <img src="./assets/portfolio/work3.jpg">
+            <img src="./assets/portfolio/work2.jpg">
+            <img src="./assets/portfolio/work1.jpg"><br>
+            <img src="./assets/portfolio/work5.jpg">
+            <img src="./assets/portfolio/work6.jpg">
+            <img src="./assets/portfolio/work7.jpg">
+            <img src="./assets/portfolio/work8.jpg">
+        </div>
     </div>
 </body>
 
