added a background image

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             <img src="./assets/portfolio/work7.jpg">
             <img src="./assets/portfolio/work8.jpg">
         </div>
+        <div class="contact">
+            <h4><strong>Contact Us</strong></h4>
+        </div>
     </div>
 </body>
 
