--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani Studio</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity = "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-            <script src="script.js"></script>
+    <script src="script.js"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -38,30 +39,33 @@
             <p>Then we help translate them into effective and elegant solutions</p>
         </div>
         <div class="services">
-            <div id="design">
-                <h1><strong>Services</strong></h1>
+            <div class="code row justify-content-center d-md-flex">
+                <div id="design">
+                    <h1><strong>Services</strong></h1>
+                </div>
+                <p>Before we sign a contact or write a line of code our team will speand the necessary time needed to
+                    understand your product vision</p>
+                <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
+                <p>based on your requirements,we can provide accomplete offerings or just pieces you need</p>
             </div>
-            <p>Before we sign a contact or write a line of code our team will speand the necessary time needed to
-                understand your product vision</p>
-            <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
-            <p>based on your requirements,we can provide accomplete offerings or just pieces you need</p>
-        </div>
-        <div class="container">
-        <div class="studio row-cols-xl-3">
-            <div id="design"  class="col-md-3">
+            </div>
+            
+        <div class="container pt-5 text-center">
+        <div class="studio row">
+            <div id="design"  class="col-md-4">
                 <img src="./assets/services_icons/design_icon.png">
                 <h2>Design</h2>
                 <p>Our design practice offers a full range of services including a brand strategy,interaction and visual design and user experience testing. </p>
 
                 <p>Throught your project, our designers create and implement visual design and workflows solict users feedback and work with you to make sure  what gets build is what is neede .</p>
             </div>
-            <div id="development"  class="col-md-3">
+            <div id="development"  class="col-md-4">
                 <img src="./assets/services_icons/dev_icon.png">
                 <h3>Development</h3>
                 <p>All engineers are fluent in the latest enterprise, mobile and web development technologies</p>
                 <p>They collaborate with your team to write and improve your code on a daily basis,using proven practices such as test-driven development and pair programming</p>
              </div>
-            <div id="management" class="col-md-3">
+            <div id="management" class="col-md-4">
                 <img src="./assets/services_icons/product_icon.png">
                 <h4>Product Management</h4>
                 <p>Planning development is iterative.Because we are constantly coding and texting, the products we build are always ready to go live</p>
@@ -82,7 +86,27 @@
             <img src="./assets/portfolio/work8.jpg">
         </div>
         <div class="contact">
+            <div class="container">
             <h4><strong>Contact Us</strong></h4>
+            <form>
+                <div class="row ">
+                    <div class="col-6">
+                      <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                    </div>
+                    <div class="col-6">
+                      <input type="text" class="form-control" placeholder="Email name" aria-label="Email name">
+                    </div>
+                    <div class="col-12 ">
+                    <textarea class="form-control" rows="8" id="comment" placeholder = "Type your message here"></textarea>
+                    </div>
+                    <div class="col 12"> 
+                    <input type="submit" value="Submit">
+                </div>
+            </div>
+
+            
+            </form>
+        </div>
         </div>
     </div>
 </body>
