added google font

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -56,33 +58,36 @@
             <div class="studio row">
                 <div id="design" class="col-md-4">
                     <img src="./assets/services_icons/design_icon.png " class=" design_img">
-                   <div class = designTitle>
-                    <h2 >Design</h2>
-                    <p>Our design practice offers a full range of services including a brand strategy,interaction and
-                        visual design and user experience testing. </p>
+                    <div class=designTitle>
+                        <h2>Design</h2>
+                        <p>Our design practice offers a full range of services including a brand strategy,interaction
+                            and
+                            visual design and user experience testing. </p>
 
-                    <p>Throught your project, our designers create and implement visual design and workflows solict
-                        users feedback and work with you to make sure what gets build is what is neede .</p>
+                        <p>Throught your project, our designers create and implement visual design and workflows solict
+                            users feedback and work with you to make sure what gets build is what is neede .</p>
+                    </div>
                 </div>
-            </div>
                 <div id="development" class="col-md-4">
                     <img src="./assets/services_icons/dev_icon.png" class="development_img">
                     <div class="developmentTitle">
-                    <h3>Development</h3>
-                    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies</p>
-                    <p>They collaborate with your team to write and improve your code on a daily basis,using proven
-                        practices such as test-driven development and pair programming</p>
-                </div>
+                        <h3>Development</h3>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies
+                        </p>
+                        <p>They collaborate with your team to write and improve your code on a daily basis,using proven
+                            practices such as test-driven development and pair programming</p>
+                    </div>
                 </div>
                 <div id="management" class="col-md-4">
-                    <img src="./assets/services_icons/product_icon.png"  class="management_img">
+                    <img src="./assets/services_icons/product_icon.png" class="management_img">
                     <div class="managementTitle">
-                    <h4>Product Management</h4>
-                    <p>Planning development is iterative.Because we are constantly coding and texting, the products we
-                        build are always ready to go live</p>
-                    <p>This iterative process allows for change as business requirements evolve </p>
+                        <h4>Product Management</h4>
+                        <p>Planning development is iterative.Because we are constantly coding and texting, the products
+                            we
+                            build are always ready to go live</p>
+                        <p>This iterative process allows for change as business requirements evolve </p>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
 
@@ -103,10 +108,12 @@
                 <form>
                     <div class="row ">
                         <div class="col-6">
-                            <input type="text" id="name" class="form-control"placeholder="First name" aria-label="First name">
+                            <input type="text" id="name" class="form-control" placeholder="First name"
+                                aria-label="First name">
                         </div>
                         <div class="col-6">
-                            <input type="email" id="email" class="form-control" placeholder="Email name" aria-label="Email name">
+                            <input type="email" id="email" class="form-control" placeholder="Email name"
+                                aria-label="Email name">
                         </div>
                         <div class="col-12 ">
                             <textarea class="form-control" rows="8" id="comment"
