--- a/index.html
+++ b/index.html
@@ -90,18 +90,62 @@
                 </div>
             </div>
         </div>
-
+          
         <div class="portfolio">
+            <div class="container"> 
             <h4><strong>Porfolio</strong></h4>
-            <img src="./assets/portfolio/work4.jpg">
-            <img src="./assets/portfolio/work3.jpg">
-            <img src="./assets/portfolio/work2.jpg">
-            <img src="./assets/portfolio/work1.jpg"><br>
-            <img src="./assets/portfolio/work5.jpg">
-            <img src="./assets/portfolio/work6.jpg">
-            <img src="./assets/portfolio/work7.jpg">
-            <img src="./assets/portfolio/work8.jpg">
-        </div>
+            <div class="row">
+                <div class="pro1 col-md-3">
+                      <img src="./assets/portfolio/work4.jpg"> 
+                      <div class="ptext1 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class="pro2 col-md-3">
+                    <img src="./assets/portfolio/work3.jpg">
+                    <div class="ptext2 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class=" pro3 col-md-3">
+                    <img src="./assets/portfolio/work2.jpg">
+                    <div class="ptext3 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class="pro4 col-md-3">
+                    <img src="./assets/portfolio/work1.jpg">
+                    <div class="ptext4 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class=" pro5 col-md-3">
+                    <img src="./assets/portfolio/work8.jpg">
+                    <div class="ptext5 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class=" pro6 col-md-3">
+                    <img src="./assets/portfolio/work7.jpg">
+                    <div class="ptext6 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class="pro7 col-md-3">
+                    <img src="./assets/portfolio/work6.jpg">
+                    <div class="ptext7 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+                <div class="pro8 col-md-3">
+                    <img src="./assets/portfolio/work5.jpg">
+                    <div class="ptext8 text-display">
+                        <p class="text">Project 1</p>
+                      </div>
+                </div>
+            </div>
+         </div>
+          </div>
         <div class="contact">
             <div class="container">
                 <h4><strong>Contact Us</strong></h4>
